<resources>
    <string name="app_name">InventoryApp</string>
    <string name="in_stock">In stock</string>
    <string name="not_in_stock">Out of stock</string>
    <string name="quantity">Quantity</string>
    <string name="sup_info">Supplier info</string>
    <string name="error_product_save">Error with saving product</string>
    <string name="product_saved">Product saved</string>
    <string name="error_product_update">Error with updating product</string>
    <string name="product_updated">Product updated</string>
    <string name="error_product_delete">Error while deleting product</string>
    <string name="deleted">Product deleted</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="details_activity_title_new_product">Add product</string>
    <string name="details_activity_title_edit_product">Edit product</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="epmty_info">It seems that your shop is empty. :(  In order to populate it, click floating action button. You need to fill product name, price, quantity and supplier name.</string>
    <string name="sell">sell</string>
    <string name="call">call</string>
    <string name="phone_number">Phone number</string>
    <string name="supp_name">Supplier name</string>
    <string name="delete_question">Delete this product?</string>
    <string name="cancel">Cancel</string>
</resources>
